--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,7 @@ body {
   font-family: "Geo", sans-serif;
   font-weight: bold;
   color: var(--light-blue);
-  background-color: var(--dark-blue);
+  background-color: var(--mid-blue);
 }
 
 h1,
@@ -30,8 +30,9 @@ h6 {
 
 /* ---------------------------------------Header */
 header {
-  padding: 0.5rem;
   display: flex;
+  justify-content: center;
+  margin: 1rem auto;
 }
 
 h1 {
@@ -39,11 +40,11 @@ h1 {
   margin: 0;
 }
 
-ul {
+header ul {
   list-style: none;
 }
 
-li {
+header li {
   display: inline-block;
 }
 
@@ -65,10 +66,81 @@ main section {
   width: 30vw;
   height: 80vh;
   margin: 0 auto;
-  background-color: blue;
 }
 
 /* ------------------------------Left Section */
+.left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+button {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem 2rem;
+  background-color: var(--dark-blue);
+  color: var(--light-blue);
+  border: 3px ridge var(--light-blue);
+  border-radius: 10px;
+  font-family: inherit;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+button:hover {
+  background-color: var(--light-blue);
+  color: var(--dark-blue);
+  border: 3px ridge var(--dark-blue);
+}
 
 /* ------------------------------Middle Section */
+#mainGrid {
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  height: 600px;
+  width: 300px;
+  border: 3px ridge var(--light-blue);
+  border-radius: 5px;
+}
+
+#mainGrid div {
+  height: 28px;
+  width: 28px;
+  background-color: var(--dark-blue);
+  border: 1px solid #4079e233;
+}
+
 /* ------------------------------Right Section */
+.right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#previewGrid {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 1rem;
+  height: 90px;
+  width: 90px;
+  border: 3px ridge var(--light-blue);
+  border-radius: 5px;
+}
+
+#previewGrid div {
+  height: 28px;
+  width: 28px;
+  background-color: var(--dark-blue);
+  border: 1px solid #4079e233;
+}
+
+.scores {
+  margin-top: 1rem;
+  width: 50%;
+  background-color: var(--dark-blue);
+  border: 3px ridge var(--light-blue);
+  border-radius: 5px;
+}
