--- a/assets/style.css
+++ b/assets/style.css
@@ -139,8 +139,45 @@ button:hover {
 
 .scores {
   margin-top: 1rem;
+  padding: 0 1rem;
   width: 50%;
   background-color: var(--dark-blue);
   border: 3px ridge var(--light-blue);
+  border-radius: 10px;
+}
+
+/* ------------------------------------Modals */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: #27287999;
+}
+
+.modal-content {
+  background-color: var(--dark-blue);
+  border: 3px ridge var(--light-blue);
   border-radius: 5px;
+  margin: 20vh auto;
+  max-width: 40vw;
+}
+
+.close {
+  margin: 0 1rem;
+  color: var(--light-blue);
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: var(--mid-blue);
+  text-decoration: none;
+  cursor: pointer;
 }
