Add the modal operations to event listeners
  - create an event listener for all the buttons and map the modal
    operations to them.
  - add the drawGrids function to an event listener so that the grids
    are drawn once the page is loaded
  - once the grids are drawn, define corresponding arrays from the grid
    squares

--- a/assets/style.css
+++ b/assets/style.css
@@ -188,7 +188,7 @@ main section {
   padding: 0 1rem;
 }
 
-.close {
+#close {
   margin: 0;
   color: var(--light-blue);
   float: right;
@@ -196,8 +196,8 @@ main section {
   font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+#close:hover,
+#close:focus {
   color: var(--mid-blue);
   text-decoration: none;
   cursor: pointer;
