Add basic game variables, constants and functions
  - add block shapes, colours and selection constants/variables
  - place the grid drawing function in an event listener so they are
    drawn once the page has been loaded
  - add the divs from the grids to arrays in order to create a matrix
    to map the blocks to
  - add draw and undraw functions and combine with a time interval to
    create movement
  - add a starting function for the game, and wire it up to the start
    button

--- a/assets/style.css
+++ b/assets/style.css
@@ -59,6 +59,18 @@ h6 {
   cursor: pointer;
 }
 
+.square {
+  height: 28px;
+  width: 28px;
+  background-color: var(--dark-blue);
+  border: 1px solid #4079e233;
+}
+
+.block {
+  width: 24px;
+  height: 24px;
+  border: 3px outset;
+}
 /* ---------------------------------------Header */
 header {
   display: flex;
@@ -130,13 +142,6 @@ main section {
   border-radius: 5px;
 }
 
-#mainGrid div {
-  height: 28px;
-  width: 28px;
-  background-color: var(--dark-blue);
-  border: 1px solid #4079e233;
-}
-
 /* ------------------------------Right Section */
 .right {
   display: flex;
@@ -150,13 +155,6 @@ main section {
   margin-bottom: 1rem;
   height: 90px;
   width: 90px;
-}
-
-#previewGrid div {
-  height: 28px;
-  width: 28px;
-  background-color: var(--dark-blue);
-  border: 1px solid #4079e233;
 }
 
 .scores {
