--- a/assets/style.css
+++ b/assets/style.css
@@ -140,6 +140,7 @@ main section {
   width: 300px;
   border: 3px ridge var(--light-blue);
   border-radius: 5px;
+  overflow: hidden;
 }
 
 /* ------------------------------Right Section */
@@ -153,8 +154,8 @@ main section {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 1rem;
-  height: 90px;
-  width: 90px;
+  height: 120px;
+  width: 120px;
 }
 
 .scores {
