Alter the way that the grids are made
  - change grid-drawing constants to make them more readable,
    and apply the changes to the css file as well
  - pre-define some empty matrices that are used in the making
    of the grids
  - change the grid drawing function to be more general, and add this
    new function to the event listener that will draw the grids once the
    page is loaded

--- a/assets/style.css
+++ b/assets/style.css
@@ -132,7 +132,7 @@ main section {
   align-items: center;
 }
 
-#mainGrid {
+#gameBox {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
@@ -150,7 +150,7 @@ main section {
   justify-content: center;
 }
 
-#previewGrid {
+#previewBox {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 1rem;
