--- a/assets/style.css
+++ b/assets/style.css
@@ -129,7 +129,12 @@ main section {
 /* ------------------------------Middle Section */
 .centre {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#startButtonSmall {
+  display: none;
 }
 
 #gameBox {
@@ -304,10 +309,6 @@ form button {
     justify-content: flex-end;
   }
 
-  #menuModal button {
-    display: block;
-  }
-
   .left {
     display: none;
   }
@@ -319,4 +320,9 @@ form button {
   .right {
     display: none;
   }
+
+  #startButtonSmall {
+   display: block;
+   margin: 0 auto;
+ }
 }
