--- a/assets/style.css
+++ b/assets/style.css
@@ -140,12 +140,23 @@ main section {
 #gameBox {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 auto;
+  margin: 1rem auto;
   height: 600px;
   width: 300px;
   border: 3px ridge var(--light-blue);
   border-radius: 5px;
   overflow: hidden;
+}
+
+.touch-controls {
+  text-align: center;
+  font-size: 2rem;
+  display: none;
+}
+
+.touch-controls i {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 /* ------------------------------Right Section */
@@ -266,17 +277,26 @@ form button {
     width: 20%;
   }
 
-  #mainGrid {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 auto;
+  #gameBox {
     height: 400px;
     width: 200px;
   }
 
-  #mainGrid div {
+  .square {
     height: 18px;
     width: 18px;
+    background-color: var(--dark-blue);
+    border: 1px solid #4079e233;
+  }
+
+  .block {
+    width: 14px;
+    height: 14px;
+    border: 3px outset;
+  }
+
+  .touch-controls {
+    display: block;
   }
 
   .button {
