--- a/assets/style.css
+++ b/assets/style.css
@@ -175,6 +175,14 @@ main {
   max-width: 180px;
 }
 
+.scores h4 {
+  margin: 1rem 0;
+}
+
+.scores p {
+  margin-bottom: 1rem;
+}
+
 /* ------------------------------------Modals */
 .modal {
   display: none;
