Fix styling on contact form and add closing icons
  - Fix the styling of the contact form so that the input fields
    line up
  - Standardize the headings for all modals
  - Add close buttons for all but the menu modal, and wire them up in
    the same way used for the other buttons throughout the page
  - Adjust the scoreboard styling to account for the new closing button

--- a/assets/style.css
+++ b/assets/style.css
@@ -52,8 +52,6 @@ section {
 }
 
 .button {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
   padding: 0.5rem 2rem;
   font-family: inherit;
   font-weight: bold;
@@ -200,7 +198,12 @@ main {
   max-width: 50vw;
 }
 
-#closeButton {
+.modal-content h2 {
+  margin: 1rem;
+  font-size: 125%;
+}
+
+.close-button {
   margin: 0;
   padding: 0 1rem;
   color: var(--light-blue);
@@ -209,25 +212,19 @@ main {
   font-weight: bold;
 }
 
-#closeButton:hover,
-#closeButton:focus {
+.close-button:hover,
+.close-button:focus {
   color: var(--mid-blue);
   text-decoration: none;
   cursor: pointer;
 }
-
 /* -------------------------------------Rules Modal */
 .rules-box {
-  margin: 1rem;
+  margin: 0 1rem 1rem 1rem;
 }
 
 .rules, .controls {
   margin-bottom: 1rem;
-}
-
-.rules-box h2 {
-  margin-bottom: 1rem;
-  font-size: 125%;
 }
 
 .rules-box h3 {
@@ -247,30 +244,35 @@ main {
 
 /* --------------------------------Scoreboard Modal */
 .scoreboard-box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 30vw;
   min-width: 300px;
-}
-
-.scoreboard-box h3 {
-  margin: 1rem 0;
+  text-align: center;
 }
 
 .scoreboard-box ol {
-  margin-bottom: 1rem;
+  margin: 1rem;
+}
+
+.scoreboard-box li {
+  padding: 0.25rem 0;
 }
 
 /* ------------------------------------Contact Form */
+#contactModal p {
+  margin: 1rem auto;
+  width: 80%;
+}
+
 input, select, textarea {
   font-family: inherit;
   font-size: 1rem;
-  margin: 0 auto;
-  padding: 0.5rem;
+  display: block;
+  margin: 0.5rem auto;
+  padding: 0.25rem;
   width: 80%;
   border: 3px ridge var(--mid-blue);
   border-radius: 10px;
+  box-sizing: border-box;
   color: var(--dark-blue);
 }
 
@@ -279,6 +281,7 @@ form {
 }
 
 form button {
+  margin: 1rem auto;
   background-color: var(--mid-blue);
   color: var(--light-blue);
   border: 3px ridge var(--light-blue);
